# personal-chess-engine

./: Cargo.toml  README.md  cspell.json  kennnan_2606072342.pgn
.github/workflows/: publish.yml
crates/convert_pgn/: Cargo.toml
crates/convert_pgn/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/src/: heuristics.rs  lib.rs  move_possibility.rs  opening.rs  pgn.rs
crates/server/: Cargo.toml  uci-proxy.sh
crates/server/src/: main.rs
crates/web/: Cargo.toml
crates/web/src/: games.txt  lib.rs
src/: heuristics.rs  lib.rs  opening.rs  pgn.rs
