[workspace]
resolver = "2"
members = ["crates/convert_pgn","crates/engine", "crates/server", "crates/web"]

[workspace.package]
edition= "2024"
version = "0.1.3"
repository = "https://github.com/KennanHunter/personal-chess-engine"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

[workspace.dependencies]
shakmaty = { version = "0.30", features = ["serde"] }
