[package]
name = "engine"
authors = ["Kennan Hunter <kennanhunter5@gmail.com>"]
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
shakmaty.workspace = true

serde = { version = "1.0", features = ["derive"] }
# `getrandom`'s `js` backend is enabled by the `web` crate for WASM builds;
# feature unification means this dependency picks it up there automatically.
getrandom = { version = "0.2" }

# Only used by the native PGN-conversion tooling / tests, not in the WASM build.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pgn-reader = "0.29"
