[package]
name = "personal-chess-engine"
version = "0.1.1"
authors = ["Kennan Hunter <kennanhunter5@gmail.com>"]
edition = "2021"
repository = "https://github.com/KennanHunter/cargo"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
engine = { path = "../engine" }
wasm-bindgen = "0.2.84"
# Enable the browser RNG backend for `getrandom` across the whole WASM build.
getrandom = { version = "0.2", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
