[package]
name = "personal-chess-engine"
authors = ["Kennan Hunter <kennanhunter5@gmail.com>"]
edition.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
engine = { path = "../engine" }
wasm-bindgen = "0.2.84"
serde-wasm-bindgen = "0.4"
# Enable the browser RNG backend for `getrandom` across the whole WASM build.
getrandom = { version = "0.2", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = "1.0.228"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
